--- a/locales/en/auth.json
+++ b/locales/en/auth.json
@@ -3,6 +3,8 @@
 		"local": "Local",
 		"windowslive": "Microsoft Account",
 		"google": "Google ID",
-		"facebook": "Facebook"
+		"facebook": "Facebook",
+    "github": "GitHub",
+    "slack": "Slack"
 	}
 }
