--- a/locales/en/auth.json
+++ b/locales/en/auth.json
@@ -5,6 +5,7 @@
 		"google": "Google ID",
 		"facebook": "Facebook",
     "github": "GitHub",
-    "slack": "Slack"
+    "slack": "Slack",
+    "ldap": "LDAP / Active Directory"
 	}
 }
