--- a/locales/fr/auth.json
+++ b/locales/fr/auth.json
@@ -3,6 +3,9 @@
 		"local": "Local",
 		"windowslive": "Compte Microsoft",
 		"google": "Google ID",
-		"facebook": "Facebook"
+		"facebook": "Facebook",
+    "github": "GitHub",
+    "slack": "Slack",
+    "ldap": "LDAP / Active Directory"
 	}
 }
