LingoHub Update :rocket:
Manual push by LingoHub User: Nicolas Giard.
Project: wiki

Made with :heart: by https://lingohub.com

--- a/locales/es/auth.json
+++ b/locales/es/auth.json
@@ -1,11 +1,11 @@
 {
   "providers": {
     "local": "Local",
-    "windowslive": "Microsoft Account",
-    "google": "Google ID",
+    "windowslive": "Cuenta de Microsoft",
+    "google": "ID de google",
     "facebook": "Facebook",
     "github": "GitHub",
-    "slack": "Slack",
+    "slack": "Flojo",
     "ldap": "LDAP / Active Directory"
   }
 }
