improve ko locales

--- a/locales/ko/auth.json
+++ b/locales/ko/auth.json
@@ -1,11 +1,11 @@
 {
   "providers": {
-    "local": "노동 조합 지부",
+    "local": "자체 계정",
     "windowslive": "Microsoft 계정",
-    "google": "구글 ID",
-    "facebook": "페이스 북",
-    "github": "GitHub",
-    "slack": "Slack",
+    "google": "Google 계정",
+    "facebook": "Facebook 계정",
+    "github": "GitHub 계정",
+    "slack": "Slack 계정",
     "ldap": "LDAP / Active Directory"
   }
 }
