--- a/locales/ko/common.json
+++ b/locales/ko/common.json
@@ -4,8 +4,8 @@
     "overview": "개요"
   },
   "footer": {
-    "poweredby": "에 의해 구동",
-    "home": "집",
+    "poweredby": "Powered by",
+    "home": "홈으로",
     "top": "맨 위로"
   }
 }
