LingoHub Update :rocket:
Manual push by LingoHub User: Nicolas Giard.
Project: Wiki.js

Made with :heart: by https://lingohub.com

--- a/server/locales/de/auth.json
+++ b/server/locales/de/auth.json
@@ -2,6 +2,7 @@
   "providers": {
     "local": "Lokal",
     "windowslive": "Microsoft-Konto",
+    "azure": "Azure Active Directory",
     "google": "Google-ID",
     "facebook": "Facebook",
     "github": "GitHub",
