--- a/server/locales/es/auth.json
+++ b/server/locales/es/auth.json
@@ -2,6 +2,7 @@
   "providers": {
     "local": "Local",
     "windowslive": "Cuenta de Microsoft",
+    "azure": "Azure Active Directory",
     "google": "ID de google",
     "facebook": "Facebook",
     "github": "GitHub",
