--- a/server/locales/ko/auth.json
+++ b/server/locales/ko/auth.json
@@ -2,6 +2,7 @@
   "providers": {
     "local": "자체 계정",
     "windowslive": "Microsoft 계정",
+    "azure": "Azure Active Directory",
     "google": "Google 계정",
     "facebook": "Facebook 계정",
     "github": "GitHub 계정",
