--- a/server/locales/ru/auth.json
+++ b/server/locales/ru/auth.json
@@ -2,6 +2,7 @@
   "providers": {
     "local": "Местный",
     "windowslive": "Счет Microsoft",
+    "azure": "Azure Active Directory",
     "google": "Google ID",
     "facebook": "Facebook",
     "github": "GitHub",
