--- a/server/locales/fr/auth.json
+++ b/server/locales/fr/auth.json
@@ -2,6 +2,7 @@
   "providers": {
     "local": "Local",
     "windowslive": "Compte Microsoft",
+    "azure": "Azure Active Directory",
     "google": "Google ID",
     "facebook": "Facebook",
     "github": "GitHub",
