LingoHub Update :rocket:
Manual push by LingoHub User: Nicolas Giard.
Project: Wiki.js

Made with :heart: by https://lingohub.com

--- a/server/locales/zh/auth.json
+++ b/server/locales/zh/auth.json
@@ -1,1 +1,12 @@
-{ }
+{
+  "providers": {
+    "local": "本地的",
+    "windowslive": "微软账户",
+    "azure": "Azure活动目录",
+    "google": "Google ID",
+    "facebook": "Facebook",
+    "github": "Github",
+    "slack": "Slack",
+    "ldap": "LDAP/活动目录"
+  }
+}
