feat: Authentication localization

--- a/server/locales/en/auth.json
+++ b/server/locales/en/auth.json
@@ -1,4 +1,22 @@
 {
+  "loginrequired": "Login required",
+  "loginusing": "Log in using...",
+  "loginusingalt": "Or, log in using...",
+  "fields": {
+    "emailuser": "Email / Username",
+    "password": "Password"
+  },
+  "actions": {
+    "login": "Log In"
+  },
+  "errors": {
+    "invalidlogin": "Invalid Login",
+    "invalidloginmsg": "The email or password is invalid.",
+    "loginerror": "Login error",
+    "toomanyattempts": "Too many attempts!",
+    "toomanyattemptsmsg": "You've made too many failed attempts in a short period of time, please try again {{time}}.",
+    "usernotfound": "User not found"
+  },
   "providers": {
     "local": "Local",
     "windowslive": "Microsoft Account",
