feat: Admin + Uploads ctrl localization

--- a/server/locales/en/errors.json
+++ b/server/locales/en/errors.json
@@ -1,16 +1,19 @@
 {
-  "generic": "Oops, something went wrong",
-  "notexistdetail": "Would you like to create this entry?",
+  "alreadyexists": "This entry already exists!",
+  "debugmsg": "Detailed debug trail",
   "forbidden": "Forbidden",
   "forbiddendetail": "Sorry, you don't have the necessary permissions to access this page.",
-  "unauthorized": "Unauthorized",
-  "debugmsg": "Detailed debug trail",
+  "generic": "Oops, something went wrong",
   "invalidaction": "Invalid Action.",
+  "invalidfiletype": "Invalid File Type.",
+  "invalidfolder": "Invalid Folder.",
   "invalidpath": "Invalid page path.",
   "invaliduserid": "Invalid User Id",
+  "newpasswordtooshort": "New password is too short!",
+  "notexistdetail": "Would you like to create this entry?",
   "reservedname": "You cannot create a document with this name as it is reserved by the system.",
-  "alreadyexists": "This entry already exists!",
   "starterfailed": "Could not load starter content!",
+  "unauthorized": "Unauthorized",
   "actions": {
     "create": "Create",
     "gohome": "Go Home",
