feat: Views localization

--- a/server/locales/en/auth.json
+++ b/server/locales/en/auth.json
@@ -12,7 +12,9 @@
   "errors": {
     "invalidlogin": "Invalid Login",
     "invalidloginmsg": "The email or password is invalid.",
+    "invaliduseremail": "Invalid User Email",
     "loginerror": "Login error",
+    "notyetauthorized": "You have not been authorized to login to this site yet.",
     "toomanyattempts": "Too many attempts!",
     "toomanyattemptsmsg": "You've made too many failed attempts in a short period of time, please try again {{time}}.",
     "usernotfound": "User not found"
