LingoHub Update :rocket:
Manual push by LingoHub User: Nicolas Giard.
Project: Wiki.js

Made with :heart: by https://lingohub.com

--- a/server/locales/en/git.json
+++ b/server/locales/en/git.json
@@ -2,5 +2,5 @@
   "added": "Added {{path}}",
   "deleted": "Deleted/Renamed {{path}}",
   "updated": "Updated {{path}}",
-  "uploaded": "Uplodated {{path}}"
+  "uploaded": "Uploaded {{path}}"
 }
