--- a/server/locales/fr/auth.json
+++ b/server/locales/fr/auth.json
@@ -1,4 +1,24 @@
 {
+  "loginrequired": "Identification requise",
+  "loginusing": "Se connecter avec...",
+  "loginusingalt": "Ou connectez-vous en utilisant...",
+  "fields": {
+    "emailuser": "Courriel / Nom d'utilisateur",
+    "password": "Mot de passe"
+  },
+  "actions": {
+    "login": "S'identifier"
+  },
+  "errors": {
+    "invalidlogin": "Identifiant invalide",
+    "invalidloginmsg": "Le courriel ou mot de passe est invalide.",
+    "invaliduseremail": "Courriel de l'utilisateur invalide",
+    "loginerror": "Erreur d'identification",
+    "notyetauthorized": "Vous n'avez pas encore été autorisé à se connecter à ce site.",
+    "toomanyattempts": "Trop d'essais!",
+    "toomanyattemptsmsg": "Vous avez fait trop de tentatives dans une courte période de temps, s'il vous plaît réessayer {{time}}.",
+    "usernotfound": "Utilisateur non trouvé"
+  },
   "providers": {
     "local": "Local",
     "windowslive": "Compte Microsoft",
