--- a/server/locales/fr/common.json
+++ b/server/locales/fr/common.json
@@ -1,11 +1,54 @@
 {
   "wiki": "Wiki",
-  "headers": {
-    "overview": "Vue d'ensemble"
+  "header": {
+    "overview": "Vue d'ensemble",
+    "createdoc": "Créer un nouveau document"
   },
   "footer": {
     "poweredby": "Propulsé par",
     "home": "Accueil",
     "top": "Retour en haut"
+  },
+  "search": {
+    "placeholder": "Recherche...",
+    "results": "Résultats de la recherche",
+    "nomatch": "Aucun résultat correspondant à votre recherche",
+    "didyoumean": "Vouliez-vous dire...?"
+  },
+  "sidebar": {
+    "nav": "NAV",
+    "navigation": "Navigation",
+    "pagecontents": "Sommaire",
+    "pastversions": "Versions antérieures"
+  },
+  "nav": {
+    "home": "Accueil",
+    "account": "Compte",
+    "myprofile": "Mon Profil",
+    "stats": "Statistiques",
+    "syssettings": "Paramètres système",
+    "users": "Utilisateurs",
+    "logout": "Se Déconnecter",
+    "create": "Créer",
+    "edit": "Éditer",
+    "history": "Historique",
+    "source": "Source",
+    "move": "Déplacer",
+    "allpages": "Toutes les pages",
+    "login": "S'identifier",
+    "normalview": "Vue normale",
+    "viewlatest": "Voir le plus récent",
+    "discard": "Annuler",
+    "savechanges": "Sauvegarder",
+    "savedocument": "Sauvegarder"
+  },
+  "welcome": {
+    "title": "Bienvenue sur votre wiki!",
+    "subtitle": "Commençons par créer la page d'accueil.",
+    "createhome": "Créer la page d'accueil"
+  },
+  "loading": {
+    "source": "Chargement de la source...",
+    "editor": "Chargement de l'éditeur"
   }
 }
