--- a/server/locales/zh/common.json
+++ b/server/locales/zh/common.json
@@ -1,11 +1,54 @@
 {
   "wiki": "维基",
   "header": {
-    "overview": "总览"
+    "overview": "总览",
+    "createdoc": "创建"
   },
   "footer": {
     "poweredby": "Powered by",
     "home": "首页",
-    "top": "返回顶部"
+    "top": "滚到顶部"
+  },
+  "search": {
+    "placeholder": "搜索...",
+    "results": "搜索结果",
+    "nomatch": "没有符合你查询的结果",
+    "didyoumean": "你是指...？"
+  },
+  "sidebar": {
+    "nav": "导航",
+    "navigation": "导航",
+    "pagecontents": "页面内容",
+    "pastversions": "历史版本"
+  },
+  "nav": {
+    "home": "首页",
+    "account": "帐户",
+    "myprofile": "我的信息",
+    "stats": "统计",
+    "syssettings": "系统设置",
+    "users": "用户",
+    "logout": "登出",
+    "create": "创建",
+    "edit": "编辑",
+    "history": "历史",
+    "source": "源文件",
+    "move": "移动",
+    "allpages": "所有页面",
+    "login": "登录",
+    "normalview": "正常视图",
+    "viewlatest": "查看最新",
+    "discard": "放弃",
+    "savechanges": "保存",
+    "savedocument": "保存文档"
+  },
+  "welcome": {
+    "title": "欢迎访问您的维基！",
+    "subtitle": "让我们开始并创建首页。",
+    "createhome": "创建首页"
+  },
+  "loading": {
+    "source": "资源加载中...",
+    "editor": "编辑器加载中..."
   }
 }
