LingoHub Update :rocket:
Manual push by LingoHub User: Nicolas Giard.
Project: Wiki.js

Made with :heart: by https://lingohub.com

--- a/server/locales/ru/common.json
+++ b/server/locales/ru/common.json
@@ -1,11 +1,54 @@
 {
   "wiki": "Wiki",
   "header": {
-    "overview": "Обзор"
+    "overview": "Обзор",
+    "createdoc": "Создать новый документ"
   },
   "footer": {
-    "poweredby": "Питаться от",
+    "poweredby": "На Базе",
     "home": "Главная",
     "top": "Вернуться к началу"
+  },
+  "search": {
+    "placeholder": "Поиск ...",
+    "results": "Результаты поиска",
+    "nomatch": "Нет результатов, соответствующих вашему запросу",
+    "didyoumean": "Вы имели ввиду...?"
+  },
+  "sidebar": {
+    "nav": "Ни какого значения не дабавлено",
+    "navigation": "Навигация",
+    "pagecontents": "Содержание страницы",
+    "pastversions": "Предыдущие версии"
+  },
+  "nav": {
+    "home": "Главная",
+    "account": "Аккаунт",
+    "myprofile": "Мой профайл",
+    "stats": "Статистика",
+    "syssettings": "Настройки системы",
+    "users": "Пользователи",
+    "logout": "Выход",
+    "create": "Создать",
+    "edit": "Редактировать",
+    "history": "История",
+    "source": "Источник",
+    "move": "Переместить",
+    "allpages": "Все страницы",
+    "login": "Вход",
+    "normalview": "Нормальный Вид",
+    "viewlatest": "Просмотреть последние",
+    "discard": "Отменить",
+    "savechanges": "Сохранить изменения",
+    "savedocument": "Сохранить документ"
+  },
+  "welcome": {
+    "title": "Добро пожаловать в вики!",
+    "subtitle": "Давайте начнем и создадим домашнюю страницу.",
+    "createhome": "Создать домашнюю страницу"
+  },
+  "loading": {
+    "source": "Загрузка источника ...",
+    "editor": "Загрузка редактора ..."
   }
 }
