--- a/server/locales/ru/git.json
+++ b/server/locales/ru/git.json
@@ -1,1 +1,6 @@
-{ }
+{
+  "added": "Добавлено {{path}}",
+  "deleted": "Удален/Переименован{{path}}",
+  "updated": "Обновлен{{path}}",
+  "uploaded": "Загружено {{path}}"
+}
