--- a/server/locales/es/git.json
+++ b/server/locales/es/git.json
@@ -1,1 +1,6 @@
-{ }
+{
+  "added": "Se ha añadido {{path}}",
+  "deleted": "Eliminado/Renombrado {{path}}",
+  "updated": "{{path}} Actualizado",
+  "uploaded": "{{path}} se ha subido"
+}
