--- a/server/locales/ko/common.json
+++ b/server/locales/ko/common.json
@@ -1,11 +1,54 @@
 {
   "wiki": "위키",
   "header": {
-    "overview": "개요"
+    "overview": "개요",
+    "createdoc": "새 문서 만들기"
   },
   "footer": {
     "poweredby": "Powered by",
     "home": "홈으로",
     "top": "맨 위로"
+  },
+  "search": {
+    "placeholder": "검색",
+    "results": "검색 결과",
+    "nomatch": "검색어와 일치하는 결과가 없습니다.",
+    "didyoumean": "혹시 이런 의미였습니까?"
+  },
+  "sidebar": {
+    "nav": "NAV",
+    "navigation": "네비게이션",
+    "pagecontents": "페이지 내용",
+    "pastversions": "페이지 버전"
+  },
+  "nav": {
+    "home": "홈으로",
+    "account": "계정",
+    "myprofile": "내 프로필",
+    "stats": "통계",
+    "syssettings": "시스템 설정",
+    "users": "사용자",
+    "logout": "로그아웃",
+    "create": "추가",
+    "edit": "편집",
+    "history": "히스토리",
+    "source": "출처",
+    "move": "옮김",
+    "allpages": "모든 페이지",
+    "login": "로그인",
+    "normalview": "기본 보기",
+    "viewlatest": "최신 보기",
+    "discard": "폐기",
+    "savechanges": "변경사항 저장",
+    "savedocument": "문서 저장"
+  },
+  "welcome": {
+    "title": "위키에 오신 걸 환영합니다!",
+    "subtitle": "홈페이지를 만들어봅시다.",
+    "createhome": "홈페이지 만들기"
+  },
+  "loading": {
+    "source": "소스 로딩 중",
+    "editor": "에디터 로딩 중"
   }
 }
