refactor: All Pages tree Vue component

--- a/server/locales/en/browser.json
+++ b/server/locales/en/browser.json
@@ -1,4 +1,7 @@
 {
+  "nav": {
+    "home": "Home"
+  },
   "profile": {
     "displayname": "Display Name",
     "displaynameexample": "John Smith",
