feat: added localization to modal-create-user

--- a/server/locales/en/browser.json
+++ b/server/locales/en/browser.json
@@ -25,6 +25,15 @@
     "createpagetitle": "Create New Page",
     "createpagepath": "Enter the new page path:",
     "createpageinvalid": "This page path is invalid!",
+    "createusertitle": "Create / Authorize User",
+    "createuseremail": "Email address:",
+    "createuseremailplaceholder": "e.g. john.doe@company.com",
+    "createuserprovider": "Provider:",
+    "createuserpassword": "Password:",
+    "createusername": "Full Name:",
+    "createusernameplaceholder": "e.g. John Doe",
+    "createuser": "Create User",
+    "createuserauthorize": "Authorize User",
     "discard": "Discard",
     "discardpagestay": "Stay on page",
     "discardpagetitle": "Discard?",
