change two words from Korean locale, source : 소스 is better than 출처, move : 이동 is better than 옮김

--- a/server/locales/ko/common.json
+++ b/server/locales/ko/common.json
@@ -25,8 +25,8 @@
     "create": "추가",
     "edit": "편집",
     "history": "히스토리",
-    "source": "출처",
-    "move": "옮김",
+    "source": "소스",
+    "move": "이동",
     "allpages": "모든 페이지",
     "login": "로그인",
     "normalview": "기본 보기",
