--- a/server/locales/en/common.json
+++ b/server/locales/en/common.json
@@ -17,25 +17,26 @@
   },
   "nav": {
     "account": "Account",
-    "settings": "Settings",
+    "allpages": "All Pages",
+    "create": "Create",
+    "discard": "Discard",
+    "edit": "Edit",
+    "history": "History",
+    "home": "Home",
+    "login": "Login",
+    "logout": "Logout",
+    "move": "Move",
     "myprofile": "My Profile",
+    "normalview": "Normal View",
+    "savechanges": "Save Changes",
+    "savedocument": "Save Document",
+    "settings": "Settings",
+    "source": "Source",
     "stats": "Stats",
     "syssettings": "System Settings",
     "theme": "Color Theme",
     "users": "Users",
-    "logout": "Logout",
-    "create": "Create",
-    "edit": "Edit",
-    "history": "History",
-    "source": "Source",
-    "move": "Move",
-    "allpages": "All Pages",
-    "login": "Login",
-    "normalview": "Normal View",
-    "viewlatest": "View Latest",
-    "discard": "Discard",
-    "savechanges": "Save Changes",
-    "savedocument": "Save Document"
+    "viewlatest": "View Latest"
   },
   "welcome": {
     "title": "Welcome to your wiki!",
