--- a/server/locales/en/browser.json
+++ b/server/locales/en/browser.json
@@ -1,53 +1,86 @@
 {
   "editor": {
-    "discard": "Discard",
-    "codeblocktitle": "Insert Code Block",
     "codeblockinsert": "Insert Code Block",
     "codeblocklanguage": "Language",
     "codeblockloading": "Loading code syntax for {{name}}",
     "codeblockloadingerror": "Error: Unable to load language syntax.",
     "codeblocksuccess": "Your code block has been inserted.",
-    "videotitle": "Insert Video",
-    "videolinktitle": "Enter the link to the video to be embedded:",
-    "videoinsert": "Insert Video",
-    "videonotsupported": "This URL is invalid or not supported!",
-    "videosupportedtitle": "The following are supported:",
+    "codeblocktitle": "Insert Code Block",
+    "discard": "Discard",
+    "filedeleteaction": "Delete",
+    "filedeleteloading": "Deleting file...",
+    "filedeletedefault": "this file",
+    "fileerror": "Unable to fetch updated listing.",
+    "filefolderempty": "This folder is empty.",
+    "fileinsert": "Insert Link to File",
+    "fileloading": "Fetching files...",
+    "filemoveaction": "Move to...",
+    "filemoveerror": "Move error: {{err}}",
+    "filemoveloading": "Moving file...",
+    "fileprocessing": "Processing...",
+    "filerenameaction": "Rename",
+    "filesuccess": "File link has been inserted.",
+    "filetitle": "Insert File",
+    "fileupload": "Upload File",
+    "folders": "Folders",
+    "foldersloading": "Fetching folders list...",
+    "newfolder": "New Folder",
     "videoanymp4file": "Any standard MP4 file",
-    "videosuccess": "The video code has been inserted."
+    "videoinsert": "Insert Video",
+    "videolinktitle": "Enter the link to the video to be embedded:",
+    "videonotsupported": "This URL is invalid or not supported!",
+    "videosuccess": "The video code has been inserted.",
+    "videosupportedtitle": "The following are supported:",
+    "videotitle": "Insert Video"
   },
   "modal": {
     "abort": "Abort",
-    "anchortitle": "Copy link to this section",
-    "anchorsuccess": "The URL has been copied to your clipboard.",
     "anchorerror": "Clipboard copy failed. Copy the URL manually.",
+    "anchorsuccess": "The URL has been copied to your clipboard.",
+    "anchortitle": "Copy link to this section",
     "copyclipboard": "Copy to Clipboard",
     "create": "Create",
-    "createpagetitle": "Create New Page",
-    "createpagepath": "Enter the new page path:",
     "createpageinvalid": "This page path is invalid!",
-    "createusertitle": "Create / Authorize User",
-    "createuseremail": "Email address:",
-    "createuseremailplaceholder": "e.g. john.doe@company.com",
-    "createuserprovider": "Provider:",
-    "createuserpassword": "Password:",
-    "createusername": "Full Name:",
-    "createusernameplaceholder": "e.g. John Doe",
+    "createpagepath": "Enter the new page path:",
+    "createpagetitle": "Create New Page",
     "createuser": "Create User",
     "createuserauthorize": "Authorize User",
-    "discard": "Discard",
-    "discardpagestay": "Stay on page",
-    "discardpagetitle": "Discard?",
-    "discardpagecreate": "Are you sure you want to leave this page and loose anything you wrote so far?",
-    "discardpageedit": "Are you sure you want to leave this page and loose any modifications?",
+    "createuseremail": "Email address:",
+    "createuseremailplaceholder": "e.g. john.doe@company.com",
+    "createusername": "Full Name:",
+    "createusernameplaceholder": "e.g. John Doe",
+    "createuserpassword": "Password:",
+    "createuserprovider": "Provider:",
+    "createusertitle": "Create / Authorize User",
     "delete": "Delete",
+    "deletefiletitle": "Delete?",
+    "deletefilewarn": "Are you sure you want to delete",
     "deleteusertitle": "Delete User Account?",
     "deleteuserwarning": "Are you sure you want to delete this user account? This action cannot be undone!",
+    "discard": "Discard",
+    "discardpagecreate": "Are you sure you want to leave this page and loose anything you wrote so far?",
+    "discardpageedit": "Are you sure you want to leave this page and loose any modifications?",
+    "discardpagestay": "Stay on page",
+    "discardpagetitle": "Discard?",
     "move": "Move",
-    "movepagetitle": "Move Page",
-    "movepagepath": "Enter the new page path:",
     "movepageinvalid": "This page path is invalid or not allowed!",
+    "movepagepath": "Enter the new page path:",
+    "movepageplaceholder": "page-name",
+    "movepagetitle": "Move Page",
     "movepagewarning": "Note that moving or renaming pages can lead to broken links. Make sure to edit any page that links to this page afterwards!",
-    "movepageplaceholder": "page-name"
+    "newfolderinvalid": "This folder name is invalid!",
+    "newfolderloading": "Creating new folder...",
+    "newfoldername": "Enter the new folder name:",
+    "newfoldernameplaceholder": "folder name",
+    "newfoldersuccess": "New folder {{name}} created.",
+    "newfoldertitle": "New Folder",
+    "renamefile": "Rename",
+    "renamefileerror": "Rename error: {{err}}",
+    "renamefileinvalid": "This filename is invalid!",
+    "renamefileloading": "Renaming file...",
+    "renamefilename": "Enter the new filename (without the extension) of the file:",
+    "renamefilenameplaceholder": "filename",
+    "renamefiletitle": "Rename File"
   },
   "nav": {
     "home": "Home"
@@ -61,9 +94,9 @@
     "savechanges": "Save Changes"
   },
   "search": {
-    "placeholder": "Search...",
-    "results": "Search Results",
+    "didyoumean": "Did you mean...?",
     "nomatch": "No results matching your query",
-    "didyoumean": "Did you mean...?"
+    "placeholder": "Search...",
+    "results": "Search Results"
   }
 }
