LingoHub Update :rocket:
Manual push by LingoHub User: Nicolas Giard.
Project: Wiki.js

Made with :heart: by https://lingohub.com

--- a/server/locales/es/common.json
+++ b/server/locales/es/common.json
@@ -17,25 +17,25 @@
   },
   "nav": {
     "account": "Cuenta",
-    "settings": "Ajustes",
+    "allpages": "Todas las páginas",
+    "create": "Crear",
+    "discard": "Descartar",
+    "edit": "Editar",
+    "history": "Historia",
+    "login": "Iniciar Sesión",
+    "logout": "Cerrar Sesión",
+    "move": "Mover",
     "myprofile": "Mi perfil",
+    "normalview": "Vista normal",
+    "savechanges": "Guardar Cambios",
+    "savedocument": "Guardar documento",
+    "settings": "Ajustes",
+    "source": "Fuente",
     "stats": "Estadísticas",
     "syssettings": "Ajustes del sistema",
     "theme": "Tema de Colores",
     "users": "Usuarios",
-    "logout": "Cerrar Sesión",
-    "create": "Crear",
-    "edit": "Editar",
-    "history": "Historia",
-    "source": "Fuente",
-    "move": "Mover",
-    "allpages": "Todas las páginas",
-    "login": "Iniciar Sesión",
-    "normalview": "Vista normal",
-    "viewlatest": "Ver más reciente",
-    "discard": "Descartar",
-    "savechanges": "Guardar Cambios",
-    "savedocument": "Guardar documento"
+    "viewlatest": "Ver más reciente"
   },
   "welcome": {
     "title": "¡Bienvenido a tu wiki!",
