--- a/server/locales/fr/browser.json
+++ b/server/locales/fr/browser.json
@@ -1,44 +1,86 @@
 {
   "editor": {
-    "discard": "Annuler",
-    "codeblocktitle": "Insérer un bloc de code",
     "codeblockinsert": "Insérer le bloc de code",
     "codeblocklanguage": "Syntaxe",
     "codeblockloading": "Chargement de la syntaxe pour {{name}}",
     "codeblockloadingerror": "Erreur: Impossible de charger la syntaxe.",
     "codeblocksuccess": "Votre bloc de code a été inséré.",
-    "videotitle": "Insérer une vidéo",
-    "videolinktitle": "Entrez le lien vers la vidéo à intégrer:",
-    "videoinsert": "Insérer la vidéo",
-    "videonotsupported": "Cette URL n'est pas valide ou n'est pas prise en charge!",
-    "videosupportedtitle": "Les formats suivants sont pris en charge:",
+    "codeblocktitle": "Insérer un bloc de code",
+    "discard": "Annuler",
+    "filedeleteaction": "Supprimer",
+    "filedeleteloading": "Suppression du fichier...",
+    "filedeletedefault": "ce fichier",
+    "fileerror": "Échec de mise à jour de la liste.",
+    "filefolderempty": "Ce dossier est vide.",
+    "fileinsert": "Insérer un lien vers le fichier",
+    "fileloading": "Récupération des fichiers",
+    "filemoveaction": "Déplacer vers...",
+    "filemoveerror": "Erreur de déplacement: {{err}}",
+    "filemoveloading": "Déplacement du fichier ...",
+    "fileprocessing": "En traitement...",
+    "filerenameaction": "Renommer",
+    "filesuccess": "Le lien vers le fichier a été inséré.",
+    "filetitle": "Insérer un fichier",
+    "fileupload": "Téléverser un fichier",
+    "folders": "Dossiers",
+    "foldersloading": "Récupérer la liste des dossiers ...",
+    "newfolder": "Nouveau dossier",
     "videoanymp4file": "Tout fichier MP4 standard",
-    "videosuccess": "Le code vidéo a été inséré."
+    "videoinsert": "Insérer la vidéo",
+    "videolinktitle": "Entrez le lien vers la vidéo à intégrer:",
+    "videonotsupported": "Cette URL n'est pas valide ou n'est pas prise en charge!",
+    "videosuccess": "Le code vidéo a été inséré.",
+    "videosupportedtitle": "Les formats suivants sont pris en charge:",
+    "videotitle": "Insérer une vidéo"
   },
   "modal": {
     "abort": "Annuler",
-    "anchortitle": "Copier le lien vers cette section",
-    "anchorsuccess": "Le lien a été copié au presse-papiers.",
     "anchorerror": "Échec de la copie vers le presse-papiers. Copiez manuellement.",
+    "anchorsuccess": "Le lien a été copié au presse-papiers.",
+    "anchortitle": "Copier le lien vers cette section",
     "copyclipboard": "Copie vers le presse-papiers",
     "create": "Créer",
-    "createpagetitle": "Créer une nouvelle page",
-    "createpagepath": "Entrez le nouveau chemin de la page:",
     "createpageinvalid": "Ce chemin de page est invalide!",
-    "discard": "Annuler",
-    "discardpagestay": "Rester sur la page",
-    "discardpagetitle": "Quitter?",
-    "discardpagecreate": "Êtes-vous sûr de vouloir quitter cette page et perdre tout ce que vous avez écrit jusqu'ici?",
-    "discardpageedit": "Êtes-vous sûr de vouloir quitter cette page et perdre toute modification?",
+    "createpagepath": "Entrez le nouveau chemin de la page:",
+    "createpagetitle": "Créer une nouvelle page",
+    "createuser": "Créer l'utilisateur",
+    "createuserauthorize": "Autoriser l'utilisateur",
+    "createuseremail": "Courriel:",
+    "createuseremailplaceholder": "ex: jean.dupont@compagnie.com",
+    "createusername": "Nom Complet:",
+    "createusernameplaceholder": "ex: Jean Dupont",
+    "createuserpassword": "Mot de passe:",
+    "createuserprovider": "Fournisseur:",
+    "createusertitle": "Créer / Autoriser un utilisateur",
     "delete": "Supprimer",
+    "deletefiletitle": "Supprimer",
+    "deletefilewarn": "Etes-vous sûr de vouloir supprimer",
     "deleteusertitle": "Supprimer le compte utilisateur?",
     "deleteuserwarning": "Êtes-vous sûr de vouloir supprimer ce compte utilisateur? Impossible de revenir en arrière une fois l'action complétée!",
+    "discard": "Annuler",
+    "discardpagecreate": "Êtes-vous sûr de vouloir quitter cette page et perdre tout ce que vous avez écrit jusqu'ici?",
+    "discardpageedit": "Êtes-vous sûr de vouloir quitter cette page et perdre toute modification?",
+    "discardpagestay": "Rester sur la page",
+    "discardpagetitle": "Quitter?",
     "move": "Déplacer",
-    "movepagetitle": "Déplacer la page",
-    "movepagepath": "Entrez le nouveau chemin de page:",
     "movepageinvalid": "Ce chemin de page n'est pas valide ou non autorisé.",
+    "movepagepath": "Entrez le nouveau chemin de page:",
+    "movepageplaceholder": "nom-de-page",
+    "movepagetitle": "Déplacer la page",
     "movepagewarning": "Notez que le déplacement ou le renommage des pages peut entraîner des liens cassés. Assurez-vous d'éditer toute page qui relie vers cette page!",
-    "movepageplaceholder": "nom-de-page"
+    "newfolderinvalid": "Ce nom de dossier est invalide!",
+    "newfolderloading": "Création du nouveau dossier ...",
+    "newfoldername": "Entrez le nom du nouveau dossier:",
+    "newfoldernameplaceholder": "nom de dossier",
+    "newfoldersuccess": "Nouveau dossier {{name}} créé.",
+    "newfoldertitle": "Nouveau dossier",
+    "renamefile": "Renommer",
+    "renamefileerror": "Erreur lors du renommage: {{err}}",
+    "renamefileinvalid": "Ce nom de fichier est invalide!",
+    "renamefileloading": "Renommage du fichier...",
+    "renamefilename": "Entrez le nouveau nom de fichier (sans extension):",
+    "renamefilenameplaceholder": "nom-du-fichier",
+    "renamefiletitle": "Renommer le fichier"
   },
   "nav": {
     "home": "Accueil"
@@ -52,9 +94,9 @@
     "savechanges": "Sauvegarder"
   },
   "search": {
-    "placeholder": "Recherche...",
-    "results": "Résultats de la recherche",
+    "didyoumean": "Vouliez-vous dire...?",
     "nomatch": "Aucun résultat correspondant à votre recherche",
-    "didyoumean": "Vouliez-vous dire...?"
+    "placeholder": "Recherche...",
+    "results": "Résultats de la recherche"
   }
 }
