--- a/server/locales/fr/common.json
+++ b/server/locales/fr/common.json
@@ -17,25 +17,25 @@
   },
   "nav": {
     "account": "Compte",
-    "settings": "Paramètres",
+    "allpages": "Toutes les pages",
+    "create": "Créer",
+    "discard": "Annuler",
+    "edit": "Éditer",
+    "history": "Historique",
+    "login": "S'identifier",
+    "logout": "Se Déconnecter",
+    "move": "Déplacer",
     "myprofile": "Mon Profil",
+    "normalview": "Vue normale",
+    "savechanges": "Sauvegarder",
+    "savedocument": "Sauvegarder",
+    "settings": "Paramètres",
+    "source": "Source",
     "stats": "Statistiques",
     "syssettings": "Paramètres système",
     "theme": "Thème de couleur",
     "users": "Utilisateurs",
-    "logout": "Se Déconnecter",
-    "create": "Créer",
-    "edit": "Éditer",
-    "history": "Historique",
-    "source": "Source",
-    "move": "Déplacer",
-    "allpages": "Toutes les pages",
-    "login": "S'identifier",
-    "normalview": "Vue normale",
-    "viewlatest": "Voir le plus récent",
-    "discard": "Annuler",
-    "savechanges": "Sauvegarder",
-    "savedocument": "Sauvegarder"
+    "viewlatest": "Voir le plus récent"
   },
   "welcome": {
     "title": "Bienvenue sur votre wiki!",
