--- a/server/locales/ko/common.json
+++ b/server/locales/ko/common.json
@@ -17,23 +17,23 @@
   },
   "nav": {
     "account": "계정",
+    "allpages": "모든 페이지",
+    "create": "추가",
+    "discard": "폐기",
+    "edit": "편집",
+    "history": "히스토리",
+    "login": "로그인",
+    "logout": "로그아웃",
+    "move": "옮김",
     "myprofile": "내 프로필",
+    "normalview": "기본 보기",
+    "savechanges": "변경사항 저장",
+    "savedocument": "문서 저장",
+    "source": "출처",
     "stats": "통계",
     "syssettings": "시스템 설정",
     "users": "사용자",
-    "logout": "로그아웃",
-    "create": "추가",
-    "edit": "편집",
-    "history": "히스토리",
-    "source": "출처",
-    "move": "옮김",
-    "allpages": "모든 페이지",
-    "login": "로그인",
-    "normalview": "기본 보기",
-    "viewlatest": "최신 보기",
-    "discard": "폐기",
-    "savechanges": "변경사항 저장",
-    "savedocument": "문서 저장"
+    "viewlatest": "최신 보기"
   },
   "welcome": {
     "title": "위키에 오신 걸 환영합니다!",
