--- a/server/locales/pt/common.json
+++ b/server/locales/pt/common.json
@@ -17,25 +17,25 @@
   },
   "nav": {
     "account": "Conta",
-    "settings": "Configurações",
+    "allpages": "Todas Páginas",
+    "create": "Criar",
+    "discard": "Descartar",
+    "edit": "Editar",
+    "history": "Historico",
+    "login": "Login",
+    "logout": "Sair",
+    "move": "Mover",
     "myprofile": "Meu Perfil",
+    "normalview": "Visão Normal",
+    "savechanges": "Salvar Alterações",
+    "savedocument": "Salvar Documento",
+    "settings": "Configurações",
+    "source": "Fonte",
     "stats": "Statatísticas",
     "syssettings": "Configurações do Sistema",
     "theme": "Tema de Cor",
     "users": "Usuários",
-    "logout": "Sair",
-    "create": "Criar",
-    "edit": "Editar",
-    "history": "Historico",
-    "source": "Fonte",
-    "move": "Mover",
-    "allpages": "Todas Páginas",
-    "login": "Login",
-    "normalview": "Visão Normal",
-    "viewlatest": "Ver últimas",
-    "discard": "Descartar",
-    "savechanges": "Salvar Alterações",
-    "savedocument": "Salvar Documento"
+    "viewlatest": "Ver últimas"
   },
   "welcome": {
     "title": "Bem-vindo à sua wiki!",
