--- a/server/locales/ru/browser.json
+++ b/server/locales/ru/browser.json
@@ -11,9 +11,9 @@
     "savechanges": "Сохранить изменения "
   },
   "search": {
-    "placeholder": "Поиск ...",
-    "results": "Результаты поиска",
+    "didyoumean": "Вы имели ввиду...?",
     "nomatch": "Нет результатов, соответствующих вашему запросу",
-    "didyoumean": "Вы имели ввиду...?"
+    "placeholder": "Поиск ...",
+    "results": "Результаты поиска"
   }
 }
