--- a/server/locales/ru/common.json
+++ b/server/locales/ru/common.json
@@ -17,23 +17,23 @@
   },
   "nav": {
     "account": "Аккаунт",
+    "allpages": "Все страницы",
+    "create": "Создать",
+    "discard": "Отменить",
+    "edit": "Редактировать",
+    "history": "История",
+    "login": "Вход",
+    "logout": "Выход",
+    "move": "Переместить",
     "myprofile": "Мой профайл",
+    "normalview": "Нормальный Вид",
+    "savechanges": "Сохранить изменения",
+    "savedocument": "Сохранить документ",
+    "source": "Источник",
     "stats": "Статистика",
     "syssettings": "Настройки системы",
     "users": "Пользователи",
-    "logout": "Выход",
-    "create": "Создать",
-    "edit": "Редактировать",
-    "history": "История",
-    "source": "Источник",
-    "move": "Переместить",
-    "allpages": "Все страницы",
-    "login": "Вход",
-    "normalview": "Нормальный Вид",
-    "viewlatest": "Просмотреть последние",
-    "discard": "Отменить",
-    "savechanges": "Сохранить изменения",
-    "savedocument": "Сохранить документ"
+    "viewlatest": "Просмотреть последние"
   },
   "welcome": {
     "title": "Добро пожаловать в вики!",
