--- a/server/locales/es/browser.json
+++ b/server/locales/es/browser.json
@@ -1,19 +1,52 @@
 {
   "editor": {
-    "discard": "Descartar",
-    "codeblocktitle": "Insertar Bloque de Código",
     "codeblockinsert": "Insertar Bloque de Código",
     "codeblocklanguage": "Lenguaje",
     "codeblockloading": "Cargando sintaxis de código para {{name}}",
     "codeblockloadingerror": "Error: No se pudo cargar la sintaxis",
     "codeblocksuccess": "Tu bloque de código ha sido insertado",
-    "videotitle": "Insertar Video",
-    "videolinktitle": "Ingresar el link al video a ser embebido",
-    "videoinsert": "Insertar Video",
-    "videonotsupported": "La URL es inválida o no está soportada!",
-    "videosupportedtitle": "Los siguientes están soportados:",
+    "codeblocktitle": "Insertar Bloque de Código",
+    "discard": "Descartar",
     "videoanymp4file": "Cualquier archivo MP4 estándar",
-    "videosuccess": "El código de video ha sido insertado"
+    "videoinsert": "Insertar Video",
+    "videolinktitle": "Ingresar el link al video a ser embebido",
+    "videonotsupported": "La URL es inválida o no está soportada!",
+    "videosuccess": "El código de video ha sido insertado",
+    "videosupportedtitle": "Los siguientes están soportados:",
+    "videotitle": "Insertar Video"
+  },
+  "modal": {
+    "abort": "Abortar",
+    "anchorerror": "Falló la copia del Portapapeles. Copie la URL manualmente.",
+    "anchorsuccess": "La URL ha sido copiada al portapapeles",
+    "anchortitle": "Copiar enlace a esta sección",
+    "copyclipboard": "Copiar al Portapapeles",
+    "create": "Crear",
+    "createpageinvalid": "Ruta de página inválida!",
+    "createpagepath": "Ingrese la nueva ruta de página:",
+    "createpagetitle": "Crear Nueva Página",
+    "createuser": "Crear Usuario",
+    "createuserauthorize": "Autorizar Usuario",
+    "createuseremail": "Correo Electrónico:",
+    "createuseremailplaceholder": "ejemplo: juan.perez@organizacion.com",
+    "createusername": "Nombre completo:",
+    "createusernameplaceholder": "ejemplo: Juan Perez",
+    "createuserpassword": "Contraseña:",
+    "createuserprovider": "Proveedor:",
+    "createusertitle": "Crear / Autorizar usuario",
+    "delete": "Eliminar",
+    "deleteusertitle": "¿Eliminar cuenta de usuario?",
+    "deleteuserwarning": "¿Confirma que desea eliminar esta cuenta de usuario? Esta acción no se puede deshacer!",
+    "discard": "Descartar",
+    "discardpagecreate": "¿Confirma que desea abandonar esta página y perder lo escrito al momento?",
+    "discardpageedit": "¿Confirma que desea abandonar esta página y perder los cambios?",
+    "discardpagestay": "Quedarse en la página",
+    "discardpagetitle": "Descartar?",
+    "move": "Mover",
+    "movepageinvalid": "¡Esta ruta es inválida o no está permitida!",
+    "movepagepath": "Ingrese la nueva ruta de página:",
+    "movepagetitle": "Mover página",
+    "movepagewarning": "Mover o renombrar páginas puede romper los enlaces. Asegúrese de editar las páginas que enlazan a esta página!"
   },
   "nav": {
     "home": "Página principal"
@@ -27,9 +60,9 @@
     "savechanges": "Guardar Cambios"
   },
   "search": {
-    "placeholder": "Buscar...",
-    "results": "Resultados de búsqueda",
+    "didyoumean": "Quisiste decir...?",
     "nomatch": "No se han encontrado resultados",
-    "didyoumean": "Quisiste decir...?"
+    "placeholder": "Buscar...",
+    "results": "Resultados de búsqueda"
   }
 }
