--- a/server/locales/zh/common.json
+++ b/server/locales/zh/common.json
@@ -17,25 +17,25 @@
   },
   "nav": {
     "account": "帐户",
-    "settings": "设置",
+    "allpages": "所有页面",
+    "create": "创建",
+    "discard": "放弃",
+    "edit": "编辑",
+    "history": "历史",
+    "login": "登录",
+    "logout": "登出",
+    "move": "移动",
     "myprofile": "我的信息",
+    "normalview": "正常视图",
+    "savechanges": "保存",
+    "savedocument": "保存文档",
+    "settings": "设置",
+    "source": "源文件",
     "stats": "统计",
     "syssettings": "系统设置",
     "theme": "颜色方案",
     "users": "用户",
-    "logout": "登出",
-    "create": "创建",
-    "edit": "编辑",
-    "history": "历史",
-    "source": "源文件",
-    "move": "移动",
-    "allpages": "所有页面",
-    "login": "登录",
-    "normalview": "正常视图",
-    "viewlatest": "查看最新",
-    "discard": "放弃",
-    "savechanges": "保存",
-    "savedocument": "保存文档"
+    "viewlatest": "查看最新"
   },
   "welcome": {
     "title": "欢迎访问您的维基！",
